# quote-service

./: .gitignore  Dockerfile  Dockerfile.template  Pipfile  README.md  app.py  deployment-quote-frontend.yaml  docker-compose.yml  kind-config.yaml  pod-quote-store.yaml  pyproject.toml  quotes.txt  rc-quote-frontend.yaml  rc-quote-store.yaml  requirements.txt  srv-quote-frontend.yaml  srv-quote-store.yaml  statefulset-quote-store.yaml
grpc/: README.md  grpc_quote_client.py  grpc_quote_server.py  quote_service.proto
grpc_demo/: README.md  grpc_quote_client.py  grpc_quote_server.py
scripts/: cleanup-kind.sh  e2e-test.sh  generate-dockerfile.py  setup-kind.sh
